# insight

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  config.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  wsgi.py
insight/: __init__.py  app.py  auth.py  layout.py  models.py
insight/templates/: base.html
migrations/versions/: 849f3b72f89f_create_dataset_model.py  8ea7a1a1a2a4_create_user_table.py
tests/: test_insight.py
