[tool.poetry]
name = "insight"
version = "0.1.0"
description = "Web app. Allows a user to upload data from Google Sheets and make sense of it."
authors = ["Sam Kitonyi <sam.kitonyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^1.18.1"
pandas = "^1.2.0"
google-api-python-client = "^1.12.8"
python-dotenv = "^0.15.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"
rope = "^0.18.0"
ipykernel = "^5.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
